# technopark-cpp-task-5

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: HunterGate.cmake
include/: avltree.hpp  blaze.hpp  exceptions.h  iterator.hpp  set.hpp
scripts/: coverage.sh
src/: exceptions.cpp  main.cpp
tests/: CMakeLists.txt  test_external.cpp  test_set.cpp
